k8s/productpage-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookinfo-dev-productpage
  namespace: student9-bookinfo-dev
  labels:
    app: bookinfo-dev-productpage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookinfo-dev-productpage
  template:
    metadata:
      labels:
        app: bookinfo-dev-productpage
    spec:
      containers:
        - name: bookinfo-dev-productpage
          image: ghcr.io/mrsmithz/itkmitl-bookinfo-productpage:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 8083
              name: web-port
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 8083
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /health
              port: 8083
              scheme: HTTP
      imagePullSecrets:
        - name: registry-bookinfo
